skan_tests/error/failedIf.sk
int main(){
    int x=1;
    if (50) x = 1;
    else x = 0;
    return 0;
}